--- a/template.html
+++ b/template.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Getting Started</title>
+    <title>Project</title>
   </head>
   <body class="d-flex flex-column min-vh-100">
     <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
@@ -27,14 +27,13 @@
         <div class="row">
           <div class="col-md-10 col-lg-8 mx-auto text-white">
             <h1 class="display-3">RSS агрегатор</h1>
-<!--            <p class="lead">Начните читать RSS сегодня! Это легко, это красиво.</p>-->
             <form action="" class="rss-form">
               <div class="form-row">
               <div class="col">
-                <input autofocus="" required="" name="url" aria-label="url" class="form-control form-control-lg w-100" placeholder="ссылка RSS">
+                <input autofocus="" required="" name="url" aria-label="url" class="input-value form-control form-control-lg w-100" placeholder="ссылка RSS">
               </div>
               <div class="col-auto">
-                <button type="submit" aria-label="add" class="btn btn-lg btn-primary px-sm-5">Add</button>
+                <button type="submit" aria-label="add" class="btn btn-lg btn-primary px-sm-5 btn-add">Add</button>
               </div>
             </div>
             </form>
@@ -55,7 +54,7 @@
     </main>
     <footer class="footer border-top py-3 mt-5">
       <div class="container-xl">
-        <div class="text-center">created by <a href="https://ru.hexlet.io/professions/frontend/projects/11" target="_blank">Safbek</a></div>
+        <div class="text-center">created by <a href="#" target="_blank">Safbek</a></div>
       </div>
     </footer>
 </body>
