--- a/template.html
+++ b/template.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <title>Project</title>
   </head>
+
   <body class="d-flex flex-column min-vh-100">
-    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
+    <!-- MODAL -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -52,10 +54,12 @@
         </div>
       </section>
     </main>
+
     <footer class="footer border-top py-3 mt-5">
       <div class="container-xl">
         <div class="text-center">created by <a href="#" target="_blank">Safbek</a></div>
       </div>
     </footer>
+
 </body>
 </html>
