--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <form action="" class="rss-form">
               <div class="form-row">
               <div class="col">
-                <input autofocus="" required="" name="url" aria-label="url" class="input-value form-control form-control-lg w-100" placeholder="ссылка RSS">
+                <input autofocus="" required="" name="url" aria-label="url" class="url input-value form-control form-control-lg w-100" placeholder="ссылка RSS">
               </div>
               <div class="col-auto">
-                <button type="submit" aria-label="add" class="btn btn-lg btn-primary px-sm-5 btn-add">Add</button>
+                <button type="submit" aria-label="add" class="btn btn-lg btn-primary px-sm-5 btn-add">Добавить</button>
               </div>
             </div>
             </form>
