--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               </div>
             </div>
             </form>
-            <p class="text-muted my-1">Пример: https://site/lessons.rss</p>
+            <p class="text-muted my-1">Пример: https://ru.hexlet.io/lessons.rss</p>
             <div class="feedback"></div>
           </div>
         </div>
